# SlicerVolumePlaneCut

./: .gitignore  CMakeLists.txt  LICENSE  README.md  funcs.py
PlaneCut/: CMakeLists.txt  PlaneCut.py
PlaneCut/Resources/UI/: PlaneCut.ui
